Fix display of stats

--- a/lib/presentation/core/localization/de.json
+++ b/lib/presentation/core/localization/de.json
@@ -456,9 +456,12 @@
   "speaking_normal_change": "Normale Validierung verwenden",
   "google_signin": "Mit Google anmelden",
   "test_time_spent": "Zeit: ",
+  "test_time_per_card_stat": "Sekunden pro Kard Insgesamt",
   "test_time_per_card_card": " Sekunden pro Kard Insgesamt",
   "test_time_per_card_word": " Sekunden pro Wort",
+  "test_time_per_card_word_simpl": "sek/wort",
   "test_time_per_card_grammar": " Sekunden pro Punkt",
+  "test_time_per_card_grammar_simpl": "sek/punkt",
   "settings_general_timer": "Timer in Tests anzeigen",
   "settings_general_timer_description": "Wenn aktiviert, wird ein Timer angezeigt, um Ihnen mitzuteilen, wie lange Sie für die Tests brauchen."
 }
