--- a/lib/presentation/core/localization/de.json
+++ b/lib/presentation/core/localization/de.json
@@ -358,7 +358,7 @@
   "daily_test_cannot_go_back": "Sie führen gerade einen täglichen Test durch. Beenden Sie den Test, Sie können es schaffen!",
   "settings_notifications_label": "Aktivieren/Deaktivieren von Benachrichtigungen",
   "stats_tests_by_type": "Gesamtzahl der Tests nach Typ",
-  "stats_tests_total_acc": "Gesamtgenauigkeit der Tests nach Studienmodus",
+  "stats_tests_total_acc": "Gesamtgenauigkeit der Tests",
   "stats_tests_tap_to_specs": "Tippen Sie auf die Balken, um weitere Details zu sehen",
   "folder_practice_title": "Üben Sie mit einer Teilmenge von Wörtern aus den Listen in diesem Ordner.",
   "disclaimer_spatial_repetition": "Die Praxis basiert auf dem Lernen durch Nicht-Wiederholung. Diese Methode wird so angewandt, dass Wörter, die Sie beim Üben übersehen haben, am Ende der gesamten Prüfung wieder auftauchen (bis Sie sie richtig können). Dies fördert das Lernen und verbessert das Einprägen von Vokabeln",
@@ -454,5 +454,14 @@
   "settings_general_stt_description": "Wenn aktiv, wird die Spracherkennung verwendet, um die Wörter der Sprachübung oder des Tests automatisch zu validieren. Wenn nicht, erfolgt die Validierung wie in den anderen Modi manuell",
   "speaking_stt_change": "Spracherkennung verwenden",
   "speaking_normal_change": "Normale Validierung verwenden",
-  "google_signin": "Mit Google anmelden"
+  "google_signin": "Mit Google anmelden",
+  "test_time_spent": "Zeit: ",
+  "test_time_per_card_stat": "Sekunden pro Kard Insgesamt",
+  "test_time_per_card_card": " Sekunden pro Kard Insgesamt",
+  "test_time_per_card_word": " Sekunden pro Wort",
+  "test_time_per_card_word_simpl": "sek/wort",
+  "test_time_per_card_grammar": " Sekunden pro Punkt",
+  "test_time_per_card_grammar_simpl": "sek/punkt",
+  "settings_general_timer": "Timer in Tests anzeigen",
+  "settings_general_timer_description": "Wenn aktiviert, wird ein Timer angezeigt, um Ihnen mitzuteilen, wie lange Sie für die Tests brauchen."
 }
