Ninja: added TestData removal

--- a/lib/presentation/core/localization/de.json
+++ b/lib/presentation/core/localization/de.json
@@ -166,8 +166,8 @@
   "settings_theme_light": "Licht",
   "settings_theme_dark": "Dunkelheit",
   "change_word_in_test_selection": "Wählen Sie einen Wert",
-  "test_history_showRemoveTestsDialog_title": "Alle Tests entfernen ",
-  "test_history_showRemoveTestsDialog_content": "Alle auf diesem Gerät gespeicherten Tests werden entfernt. Diese Aktion kann nicht rückgängig gemacht werden. Wollen Sie fortfahren? ",
+  "test_history_showRemoveTestsDialog_title": "Tests und ihre Daten entfernen",
+  "test_history_showRemoveTestsDialog_content": "Alle auf diesem Gerät gespeicherten Tests und ihre Daten werden entfernt. Diese Aktion kann nicht rückgängig gemacht werden. Diese Aktion kann nicht rückgängig gemacht werden, möchten Sie fortfahren?",
   "test_history_showRemoveTestsDialog_positive": "Entfernen",
   "test_history_title": "Testverlauf",
   "test_history_load_failed": "Tests konnten nicht abgerufen werden",
