--- a/lib/presentation/core/localization/en.json
+++ b/lib/presentation/core/localization/en.json
@@ -166,8 +166,8 @@
   "settings_theme_light": "Light",
   "settings_theme_dark": "Dark",
   "change_word_in_test_selection": "Select a Value",
-  "test_history_showRemoveTestsDialog_title": "Removing All Tests",
-  "test_history_showRemoveTestsDialog_content": "All tests saved on this device will be removed. This action cannot be undone. Do you want to proceed?",
+  "test_history_showRemoveTestsDialog_title": "Remove tests and their data",
+  "test_history_showRemoveTestsDialog_content": "All tests saved along with their data on this device will be deleted. This action cannot be undone, do you want to continue?",
   "test_history_showRemoveTestsDialog_positive": "Remove",
   "test_history_title": "Test History",
   "test_history_load_failed": "Failed to retrieve tests",
