--- a/lib/presentation/core/localization/es.json
+++ b/lib/presentation/core/localization/es.json
@@ -166,8 +166,8 @@
   "settings_theme_light": "Claro",
   "settings_theme_dark": "Oscuro",
   "change_word_in_test_selection": "Selecciona un Valor",
-  "test_history_showRemoveTestsDialog_title": "Eliminar todas los tests",
-  "test_history_showRemoveTestsDialog_content": "Se eliminarán todas las pruebas guardadas en este dispositivo. Esta acción no se puede deshacer. ¿Quieres continuar?",
+  "test_history_showRemoveTestsDialog_title": "Eliminar tests y sus datos",
+  "test_history_showRemoveTestsDialog_content": "Se eliminarán todas las pruebas guardadas  junto con sus datos en este dispositivo. Esta acción no se puede deshacer. ¿Quieres continuar?",
   "test_history_showRemoveTestsDialog_positive": "Eliminar",
   "test_history_title": "Historial de Tests",
   "test_history_load_failed": "Fallo en la recuperación de tests",
