--- a/lib/presentation/core/localization/en.json
+++ b/lib/presentation/core/localization/en.json
@@ -435,6 +435,7 @@
   "ocr_gallery": "Gallery",
   "ocr_permissions_denied": "Should grant permissions on Settings",
   "ocr_scanner": "Scanner",
+  "ocr_scanner_not_available": "(not available in web)",
   "ocr_scanner_explain": "Take or select an image to recognize the japanese characters in it. OCR will be applied using Google Machine Learning Kit, as well as the translations on the text, so some errors could be produced.",
   "ocr_translate": "Translate",
   "ocr_show_original": "Show original",
@@ -452,7 +453,7 @@
   "ocr_choose_opts": "Choose one of these options to upload an image",
   "settings_general_stt": "Use speech recognition for Speaking mode",
   "settings_general_stt_description": "If active, speech recognition shall be used to automatically validate the words of the Speaking practice or test. If not, the validation will be manual as in the other modes",
-  "speaking_stt_change": "Use speech recognition", 
+  "speaking_stt_change": "Use speech recognition",
   "speaking_normal_change": "Use normal validation",
   "google_signin": "Sign in with Google",
   "test_time_spent": "Time: ",
