--- a/lib/presentation/core/localization/es.json
+++ b/lib/presentation/core/localization/es.json
@@ -435,6 +435,7 @@
   "ocr_gallery": "Galería",
   "ocr_permissions_denied": "Debes conceder permisos en Ajustes",
   "ocr_scanner": "Escáner",
+  "ocr_scanner_not_available": "(no disponible en web)",
   "ocr_scanner_explain": "Haz o selecciona una foto para reconocer los caracteres japoneses que contiene. El OCR se aplicará utilizando Google Machine Learning Kit, así como las traducciones sobre el texto, por lo que podrían producirse algunos errores",
   "ocr_translate": "Traducir",
   "ocr_show_original": "Mostrar original",
